--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    implementation project(':TestLib')
-//    implementation 'com.github.geekaurora:LibararyDemo:1.0'
+//    implementation project(':TestLib')
+    implementation 'com.github.geekaurora:LibararyDemo:1.5'
+//    implementation 'com.github.philipplackner:AndroidLibrary:1.0'
 }
